[tool]
[tool.poetry]
name = "binapy"
version = "0.6.0"
homepage = "https://github.com/guillp/binapy"
description = "Binary Data manipulation, for humans."
authors = ["Guillaume Pujol <guill.p.linux@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "binapy" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
black  = ">=22.1"
coverage = ">=6.3.1"
isort  = ">=5.10.1"
livereload = ">=2.6.3"
mypy = ">=0.931"
mkdocs  = ">=1.3.1"
mkdocs-autorefs = ">=0.3.1"
mkdocs-include-markdown-plugin  = ">=3.2.3"
mkdocs-material  = ">=8.1.10"
mkdocs-material-extensions  = ">=1.0.1"
mkdocstrings  = { version = ">=0.18.0", extras = ["python"] }
pre-commit = ">=2.17.0"
pytest  = ">=7.0.0"
pytest-mypy = ">=0.9.1"
pytest-cov  = ">=3.0.0"
toml = ">=0.10.2"
tox  = ">=3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.mypy]
strict = true
implicit_reexport = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
